--- a/src/TaskContainer/Table.css
+++ b/src/TaskContainer/Table.css
@@ -3,6 +3,8 @@ table {
   border: 2px solid rgb(200, 200, 200);
   letter-spacing: 1px;
   font-size: 0.8rem;
+  width: 80%;
+  margin: 0 auto;
 }
 
 td,
@@ -29,4 +31,11 @@ tr:nth-child(odd) td {
 
 caption {
   padding: 10px;
+}
+
+.actions span {
+  display: block;
+  cursor: pointer;
+  font-size: 1rem;
+  color: red;
 }
