--- a/src/TaskContainer/Table.css
+++ b/src/TaskContainer/Table.css
@@ -39,3 +39,16 @@ caption {
   font-size: 1rem;
   color: red;
 }
+
+#date {
+  position: relative;
+}
+
+#date span {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  cursor: pointer;
+  font-size: 1rem;
+  font-weight: bold;
+}
